GuestbookHTMSFlags description typos
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5939 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -342,6 +342,12 @@ foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=ИД-ови тема (д
 foxtrick.TableSort.desc=Омогућава сортирање по колонама свих 'правих' табела које имају заглавље (укључујући и табеле у постовима на форуму)
 foxtrick.LiveAlert.desc=Обавештењa за голове у мечевима које пратите уживо.
 foxtrick.NtPeek.desc=Додаје преглед актуелних мечева сениорске и младе репрезентације на страницу: Мој Хеттрик » Вести
+foxtrick.GuestbookHTMSFlags.desc=Приказује заставице држава корисника уписаних у књигу гостију
+foxtrick.GuestbookHTMSFlags.AddHTMSFlags.desc=Прикажи заставице
+foxtrick.GuestbookHTMSFlags.HideAnswerToLinks.desc=Сакриј линк "Коментар" у књизи гостију
+foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToSupporters.desc=Додаје заставице држава корисника у листу супортера на страници клуба
+foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToVisitors.desc=Додаје заставице држава корисника у листу посетилаца на страницама клуба, лиге и омладинске лиге
+foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToOldies.desc=Додаје заставице држава корисника на страници играча и тренера пониклих у клубу
 
 # -----------------------------------------------------------------------------
 
