--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -713,7 +713,7 @@ foxtrick.tweaks.copyskilltable=Копирај табелу са вештинам
 foxtrick.tweaks.copyscoutreport=Копирај kоментар ловца на таленте у меморију
 foxtrick.tweaks.scoutreportcopied=Kоментар ловца на таленте је ископиран у меморију.
 foxtrick.tweaks.copyplayerscource=Копирај изворни код играча у меморију
-foxtrick.tweaks.reportcopied=Извештај/Коментар је ископиран у меморију.
+foxtrick.tweaks.trainingreportcopied=Извештај са тренинга је ископиран у меморију.
 foxtrick.tweaks.playersourcecopied=Изворни код играча је ископиран у меморију.
 foxtrick.tweaks.skilltablecopied=Изворни код табелe са вештинама је ископиран у меморију.
 foxtrick.tweaks.matchidcopied=Меч ИД је ископиран у меморију.
