Rename HighlightBotTeams to HighlightOwnerless and change default icon.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5953 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/be/foxtrick.properties
+++ b/content/locale/be/foxtrick.properties
@@ -317,7 +317,7 @@ foxtrick.MatchTables.desc=Прыбірае прабелы ў табліцах м
 foxtrick.MatchTables.RemoveTime.desc=Прыбірае час матчу ў табліцы бягучых матчаў
 foxtrick.YouthPromotes.desc=Паказвае колькасьць застаўшыхся дзён да перавода гульца
 foxtrick.htmsStatistics.desc=Дадае статыстыку матча ў вынік
-foxtrick.HighlightBotTeams.desc=Падфарбоўвае 'bot' і каманды без уладальніка на старонцы лігі
+foxtrick.HighlightOwnerless.desc=Падфарбоўвае 'bot' і каманды без уладальніка на старонцы лігі
 foxtrick.LastLogin.desc=Паказвае час, які прайшоў з моманту апошняга ўваходу, на старонцы карыстальніка
 foxtrick.TransferCompareSort.desc=Сартаваньне па кошту, TSI ці форме пасьля націску на адпаведны загаловак на старонцы параўнаньня трансфэраў
 foxtrick.ForumStripHattrickLinks.desc=Выдаляць сэрвер з унутраных спасылак на форуме, каб яны былі больш зручнымі
