--- a/content/locale/bs/foxtrick.properties
+++ b/content/locale/bs/foxtrick.properties
@@ -343,7 +343,7 @@ foxtrick.MatchTables.desc=Uklanja prazan prostor na stranicama Trenutnih i Arhiv
 foxtrick.MatchTables.RemoveTime.desc=Uklanja vrijeme odigravanja na stranici Trenutnih utakmica
 foxtrick.YouthPromotes.desc=Pokazuje broj dana do promocije juniora
 foxtrick.htmsStatistics.desc=Dodaje statistiku za rezultate utakmica.
-foxtrick.HighlightBotTeams.desc=Označava 'bot' timove i timove bez vlasnika na stranici lige
+foxtrick.HighlightOwnerless.desc=Označava 'bot' timove i timove bez vlasnika na stranici lige
 foxtrick.LastLogin.desc=Na stranici korisnika prikazuje proteklo vrijeme od posljednjeg logovanja
 foxtrick.TransferCompareSort.desc=Klikom na zaglavlje možete sortirati rezultate 'Usporedbe transfera' po TSI, cijeni i formi igrača
 foxtrick.ForumStripHattrickLinks.desc=Oslobađa server od internih linkova na forumu radi bolje iskorištenosti. Također dodaje prazno mjesto za i/b/u znakove u pred tagovima (FormatPostingText modul)"
