--- a/content/locale/ca/foxtrick.properties
+++ b/content/locale/ca/foxtrick.properties
@@ -345,7 +345,7 @@ foxtrick.MatchTables.desc=Treu l'espai en blan de la taula de partits al disseny
 foxtrick.MatchTables.RemoveTime.desc=Treu l'hora del partit a la taula de partits en curs
 foxtrick.YouthPromotes.desc=Mostra els dies que calen per promocionar un jugador del planter
 foxtrick.htmsStatistics.desc=Afegeix estadístiques de gols als partits.
-foxtrick.HighlightBotTeams.desc=Marca els equips «bot» i sense propietari a les pàgines de la lliga.
+foxtrick.HighlightOwnerless.desc=Marca els equips «bot» i sense propietari a les pàgines de la lliga.
 foxtrick.LastLogin.desc=Mostra el temps transcorregut des de la darrera entrada en la pàgina de l'usuari
 foxtrick.TransferCompareSort.desc=Feu clic a la capçalera per ordenar els resultat del comparador de transferències per TSI, preu o forma
 foxtrick.ForumStripHattrickLinks.desc=Treu el nom del servidor dels enllaços interns dels fòrums per que funcionin correctament. També afegeix un espai en blanc per les etiquetes i/b/u embegudes.
