--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -336,7 +336,7 @@ foxtrick.MatchTables.desc=Entfernt Freiräume in den Tabellen im simple design
 foxtrick.MatchTables.RemoveTime.desc=Entfernt Anstosszeiten aus der Tabelle der aktuellen Spiele
 foxtrick.YouthPromotes.desc=Anzeige der Tage, bis ein Jugendspieler gezogen werden kann
 foxtrick.htmsStatistics.desc=Hinzufügen von Ergebnis-Statistiken zu Spielen
-foxtrick.HighlightBotTeams.desc=Hervorheben von 'Bot'-Teams auf der Ligaseite
+foxtrick.HighlightOwnerless.desc=Hervorheben von 'Bot'-Teams auf der Ligaseite
 foxtrick.LastLogin.desc=Anzeige der Zeitdifferenz bei den letzten logins auf der Manager Seite
 foxtrick.TransferCompareSort.desc=Klick auf den Tabellenkopf beim Transververgleich sortiert das Ergebnis nach TSI, Preis oder Form
 foxtrick.ForumStripHattrickLinks.desc=Entfernen der Server-Strings von internen HT-Links um diese im Forum benutzbar zu machen
