--- a/content/locale/es/foxtrick.properties
+++ b/content/locale/es/foxtrick.properties
@@ -342,7 +342,7 @@ foxtrick.MatchTables.desc=Elimina el espacio en blanco en las listas de partidos
 foxtrick.MatchTables.RemoveTime.desc=Elimina la hora del partido en la lista de partidos actuales.
 foxtrick.YouthPromotes.desc=Muestra el número de días para ascender a un jugador
 foxtrick.htmsStatistics.desc=Añade estadísticas acerca del resultado en los partidos.
-foxtrick.HighlightBotTeams.desc=Destaca los bots y equipos sin manager humano en la página de jugadores.
+foxtrick.HighlightOwnerless.desc=Destaca los bots y equipos sin manager humano en la página de jugadores.
 foxtrick.LastLogin.desc=Muestra el tiempo desde el último login en la página del usuario.
 foxtrick.TransferCompareSort.desc=Pinchando en la cabecera ordena los resultados de la comparación de transferencias por TSI, precio o forma.
 foxtrick.ForumStripHattrickLinks.desc=Elimina el servidor en enlaces de HT de los foros para que funcionen correctamente. También añade especio en blanco para las etiquetas anidadas i/b/u en etiquetas 'pre' (módulo FormatPostingText)
