--- a/content/locale/es_ca/foxtrick.properties
+++ b/content/locale/es_ca/foxtrick.properties
@@ -312,7 +312,7 @@ foxtrick.MatchTables.desc=Elimina el espacio en blanco en la tabla de partidos p
 foxtrick.MatchTables.RemoveTime.desc=Elimina la hora del partido dentro de la tabla de partidos actuales
 foxtrick.YouthPromotes.desc=Muestra los días para promocionar a un jugador juvenil
 foxtrick.htmsStatistics.desc=Añade estadísticas sobre el marcador en el partido
-foxtrick.HighlightBotTeams.desc=Resalta los equipos 'bots' y sin dueño en la página de la liga
+foxtrick.HighlightOwnerless.desc=Resalta los equipos 'bots' y sin dueño en la página de la liga
 foxtrick.LastLogin.desc=Muestra el tiempo desde la última conexión en la página del mánager
 foxtrick.TransferCompareSort.desc=Dando clic en el encabezado, ordena los resultados del Comparador de Transferencias por TSI, precio o forma
 foxtrick.ForumStripHattrickLinks.desc=Arregla el servidor de los enlaces internos dentro del foro. También añade un espacio en blanco para etiquetas pre i/b/u (Modulo FormatPostingText)
