--- a/content/locale/fa/foxtrick.properties
+++ b/content/locale/fa/foxtrick.properties
@@ -312,7 +312,7 @@ foxtrick.MatchTables.desc=حذف کردن فضا سفيد در جدول بازي
 foxtrick.MatchTables.RemoveTime.desc=حذف کردن زمان بازيها در اين جدول
 foxtrick.YouthPromotes.desc=نمایش زماني که بازيکن ميتواند به تيم بزرگسالان انتقال پيدا کند
 foxtrick.htmsStatistics.desc=ارائه امار در نتيجه گلها در بازي.
-foxtrick.HighlightBotTeams.desc=هايلايت کردن تيمهاي بدون صاحب در صفحه ليگ.
+foxtrick.HighlightOwnerless.desc=هايلايت کردن تيمهاي بدون صاحب در صفحه ليگ.
 foxtrick.LastLogin.desc=نمايش زماني که از اخرين لاگين گذشته
 foxtrick.TransferCompareSort.desc=مرتب کردن بازيکنان پيدا شده در جستجو به صورت قيمت , فرم , برايند مهارتها
 foxtrick.ForumStripHattrickLinks.desc=Strips the server from internal links in forum to make them usable. Also adds whitespace for nested i/b/u in pre tags (FormatPostingText module)"
