--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -273,7 +273,7 @@ foxtrick.MatchTables.RemoveTime.desc=Poistaa ottelun ajan nykyisissä ottelutaul
 foxtrick.YouthPromotes.desc=Näyttää päivät siitä milloin voit nostaa junioripelaajan edustukseen
 foxtrick.htmsStatistics.desc=Lisää tilastoja otteluiden maalitulokseen.
 foxtrick.PredefinedChallenges.desc=Tallentaa viimeisimmät asetukset haasteissa ja täyttää valikkolaatikot niillä asetuksilla, kun teet haastetta.
-foxtrick.HighlightBotTeams.desc=Korosta 'botit' sekä joukkueet ilman manageria sarjasivulla
+foxtrick.HighlightOwnerless.desc=Korosta 'botit' sekä joukkueet ilman manageria sarjasivulla
 foxtrick.LastLogin.desc=Näyttää käyttäjän sivulla ajan siitä milloin käyttäjä on viimeksi kirjautunut
 foxtrick.TransferCompareSort.desc=Klikkaamalla otsaketta voit lajitella järjestykseen TSIn, hinnan tai kunnon siirtovertailussa
 foxtrick.ForumStripHattrickLinks.desc=Strips the server from internal links in forum to make them usable. Also adds whitespace for nested i/b/u in pre tags (FormatPostingText module)
