--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -355,8 +355,8 @@ foxtrick.htmsStatistics.Home.desc=Couleurs personnalisées des victoires
 foxtrick.htmsStatistics.Draw.desc=couleurs personnalisées des matchs nuls
 foxtrick.htmsStatistics.Away.desc=couleurs personnalisées des défaites
 foxtrick.PredefinedChallenges.desc=Enregistre les derniers choix des défis et remplit les cases correspondantes lors des prochaines demandes de défis.
-foxtrick.HighlightBotTeams.desc=Met en évidence les équipes botifiées et les équipes sans manager dans le tableau des poules.
-foxtrick.HighlightBotTeams.ChooseColorHighlight.desc=Choisissez la façon de les mettre en évidence :
+foxtrick.HighlightOwnerless.desc=Met en évidence les équipes botifiées et les équipes sans manager dans le tableau des poules.
+foxtrick.HighlightOwnerless.ChooseColorHighlight.desc=Choisissez la façon de les mettre en évidence :
 foxtrick.LastLogin.desc=Ajoute le temps depuis la dernière connexion sur la page utilisateur.
 foxtrick.TransferCompareSort.desc=Ajoute le tri des résultats des comparaisons des transferts en cliquant sur l'en-tête des colonnes (TSI, Prix ou Forme).
 foxtrick.ForumStripHattrickLinks.desc=Supprime le serveur des liens internes pour les rendre utilisables dans les forums.
