--- a/content/locale/fur/foxtrick.properties
+++ b/content/locale/fur/foxtrick.properties
@@ -339,8 +339,8 @@ foxtrick.htmsStatistics.Away.desc=Loss custom color
 foxtrick.htmsStatistics.prediction.desc=Predicted result
 foxtrick.htmsStatistics.windrawloss.desc=win/draw/loss
 foxtrick.PredefinedChallenges.desc=Saves the last settings on challenges and fills the select boxes with these settings while challenging.
-foxtrick.HighlightBotTeams.desc=Highlights 'bot' teams on the series page
-foxtrick.HighlightBotTeams.ChooseColorHighlight.desc=Choose your own way of highlighting
+foxtrick.HighlightOwnerless.desc=Highlights 'bot' teams on the series page
+foxtrick.HighlightOwnerless.ChooseColorHighlight.desc=Choose your own way of highlighting
 foxtrick.LastLogin.desc=Displays time since last login on user's page
 foxtrick.TransferCompareSort.desc=Clicking on the header sorts the TransferCompare results by TSI, price or form
 foxtrick.ForumStripHattrickLinks.desc=Strips the server from internal links in forum to make them usable
