--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -358,8 +358,8 @@ foxtrick.htmsStatistics.Home.desc=Vlastita boja za pobjedu
 foxtrick.htmsStatistics.Draw.desc=Vlastita boja za neriješeno
 foxtrick.htmsStatistics.Away.desc=Vlastita boja za poraz
 foxtrick.PredefinedChallenges.desc=Sačuvati posljednje postavke za izazove
-foxtrick.HighlightBotTeams.desc=Istaknuti neaktivne ekipe ('botove') i ekipe bez vlasnika u ligaškoj tablici
-foxtrick.HighlightBotTeams.ChooseColorHighlight.desc=Izabrati vlastiti stil za označavanje 'botova'
+foxtrick.HighlightOwnerless.desc=Istaknuti neaktivne ekipe ('botove') i ekipe bez vlasnika u ligaškoj tablici
+foxtrick.HighlightOwnerless.ChooseColorHighlight.desc=Izabrati vlastiti stil za označavanje 'botova'
 foxtrick.LastLogin.desc=Prikazati proteklo vrijeme od zadnjeg logiranja korisnika
 foxtrick.TransferCompareSort.desc=Sortirati rezultate kod 'usporedbe transfera' klikom na zaglavlje
 foxtrick.ForumStripHattrickLinks.desc=Ukloniti broj servera za postanje internih linkova u forumu.
