--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -358,8 +358,8 @@ foxtrick.htmsStatistics.desc=A végeredményre vonatkozó statisztikákat ad a m
 foxtrick.htmsStatistics.Home.desc=Egyedi szín győzelem esetén
 foxtrick.htmsStatistics.Draw.desc=Egyedi szín döntetlen esetén
 foxtrick.htmsStatistics.Away.desc=Egyedi szín vereség esetén
-foxtrick.HighlightBotTeams.desc=Kiemeli a tulajdonos nélküli és botcsapatokat a csoportoldalon
-foxtrick.HighlightBotTeams.ChooseColorHighlight.desc=A segítségével egyéni kiemelést állíthatsz be
+foxtrick.HighlightOwnerless.desc=Kiemeli a tulajdonos nélküli és botcsapatokat a csoportoldalon
+foxtrick.HighlightOwnerless.ChooseColorHighlight.desc=A segítségével egyéni kiemelést állíthatsz be
 foxtrick.LastLogin.desc=Megjeleníti a legutóbbi belépés óta eltelt időt a menedzseroldalon
 foxtrick.TransferCompareSort.desc=A fejlécre kattintva – a TSI, az ár vagy a forma alapján – rendezni tudod az Árbecslésben kapott találatokat
 foxtrick.ForumStripHattrickLinks.desc=Eltávolítja a szerverszámokat a hivatkozásokból a fórumban, hogy használhatóbbak legyenek. Whitespace karaktereket ad a pre elemekbe ágyazott i/b/u elemekhez is (FormatPostingText modul)
