--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -353,8 +353,8 @@ foxtrick.htmsStatistics.Home.desc=Colore personalizzato vittoria
 foxtrick.htmsStatistics.Draw.desc=Colore personalizzato pareggio
 foxtrick.htmsStatistics.Away.desc=Colore personalizzato sconfitta
 foxtrick.PredefinedChallenges.desc=Registra le ultime impostazioni di sfida e riempie automaticamente i campi quando si lancia una nuova sfida
-foxtrick.HighlightBotTeams.desc=Evidenzia i bot e i semibot nella pagina della serie
-foxtrick.HighlightBotTeams.ChooseColorHighlight.desc=Formato personalizzato
+foxtrick.HighlightOwnerless.desc=Evidenzia i bot e i semibot nella pagina della serie
+foxtrick.HighlightOwnerless.ChooseColorHighlight.desc=Formato personalizzato
 foxtrick.LastLogin.desc=Mostra il tempo trascorso dall'ultimo collegamento nella pagina dell'utente
 foxtrick.TransferCompareSort.desc=Permette di ordinare i risultati del confronta trasferimenti cliccando sulle intestazioni (TSI, prezzo, forma)
 foxtrick.ForumStripHattrickLinks.desc=Elimina i riferimenti al server dai link interni ad Hattrick per renderli utilizzabili. Aggiunge anche le rientranze agli elenchi in formato pre
