--- a/content/locale/mt/foxtrick.properties
+++ b/content/locale/mt/foxtrick.properties
@@ -354,8 +354,8 @@ foxtrick.htmsStatistics.Home.desc=Kulur ippersonalizzat għar-rebħ
 foxtrick.htmsStatistics.Draw.desc=Kulur ippersonalizzat għad-draws
 foxtrick.htmsStatistics.Away.desc=Kulur ippersonalizzat għat-telf
 foxtrick.PredefinedChallenges.desc=Jissejvja l-aħħar settings fi Sfidi u jimla l-kaxxi biex tagħżel b'dawn is-settings meta tkun qiegħed tisfida lil xi ħadd.
-foxtrick.HighlightBotTeams.desc=Jimmarka timijiet bot u timijiet bla sid fuq il-paġna tas-serje
-foxtrick.HighlightBotTeams.ChooseColorHighlight.desc=Jagħżel il-mod personalizzat tiegħek kif timmarka
+foxtrick.HighlightOwnerless.desc=Jimmarka timijiet bot u timijiet bla sid fuq il-paġna tas-serje
+foxtrick.HighlightOwnerless.ChooseColorHighlight.desc=Jagħżel il-mod personalizzat tiegħek kif timmarka
 foxtrick.LastLogin.desc=Juri l-ħin minn meta illogjajt l-aħħar fuq il-paġna tal-maniġer
 foxtrick.TransferCompareSort.desc=Jekk tagħfas fuq il-header jirnexxieleki tirranġa r-riżultati f'ordni skond it-TSI, il-prezz jew il-forma meta tikkumpara t-trasferiment
 foxtrick.ForumStripHattrickLinks.desc=Jiċċekkja fis-server għal links interni fil-forum biex b'hekk ikunu jistgħu jintużaw. Iżid ukoll spazju abjad għat-tikketti i/b/u li qegħdin miktubin ġo xulxin
