--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -353,8 +353,8 @@ foxtrick.htmsStatistics.Home.desc=Aangepaste kleur winst
 foxtrick.htmsStatistics.Draw.desc=Aangepaste kleur gelijkspel
 foxtrick.htmsStatistics.Away.desc=Aangepaste kleur verlies
 foxtrick.PredefinedChallenges.desc=Bewaar de laatste instellingen van een uitdaging en vul de selectieboxen met deze instellingen
-foxtrick.HighlightBotTeams.desc=Markeer botteams en eigenaarloze teams op de competitiepagina
-foxtrick.HighlightBotTeams.ChooseColorHighlight.desc=Kies je eigen wijze van markeren
+foxtrick.HighlightOwnerless.desc=Markeer botteams en eigenaarloze teams op de competitiepagina
+foxtrick.HighlightOwnerless.ChooseColorHighlight.desc=Kies je eigen wijze van markeren
 foxtrick.LastLogin.desc=Toon de tijd sinds de laatste login op de managerpagina
 foxtrick.TransferCompareSort.desc=Door te klikken op de kop kun je de transfervergelijking resultaten sorteren op TSI, prijs of vorm
 foxtrick.ForumStripHattrickLinks.desc=Verwijder de servernaam uit links op het forum, zodat ze bruikbaar worden. Voeg ook spaties toe voor ingesloten i/b/u pre tags (FormatPostingText module)
