--- a/content/locale/nn/foxtrick.properties
+++ b/content/locale/nn/foxtrick.properties
@@ -342,7 +342,7 @@ foxtrick.MatchTables.desc=Fjernar tomt område på kamptabellane i enkelt design
 foxtrick.MatchTables.RemoveTime.desc=Fjernar kamptid på noverande kamptabell
 foxtrick.YouthPromotes.desc=Syner dagar til du kan forfremje ein juniorspelar
 foxtrick.htmsStatistics.desc=Legg statistikk til på skåringsresultat i kampar
-foxtrick.HighlightBotTeams.desc=Uthevar 'bot' og eigarlause lag på seriesida
+foxtrick.HighlightOwnerless.desc=Uthevar 'bot' og eigarlause lag på seriesida
 foxtrick.LastLogin.desc=Syner tiden sidan sist innlogging på brukarsida
 foxtrick.TransferCompareSort.desc=Klikking på overskrifta sorterar resultata frå samanlikning av overgangar etter TSI, pris eller form
 foxtrick.ForumStripHattrickLinks.desc=Strippar serveren for interne lenkjer i foruma for å gjere dei raskare. Legg i tillegg til mellomrom for nøsta i/b/u i pre tags (FormatPostingText modul)"
