--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -345,7 +345,7 @@ foxtrick.CountryList.HideFlagOntop.desc=Usuwa odnośnik do ligi na stronie druż
 foxtrick.MatchTables.desc=Usuwa białe przerwy w tabelach meczowych przy prostym motywie
 foxtrick.MatchTables.RemoveTime.desc=Usuwa godzinę meczu na stronie tabeli
 foxtrick.YouthPromotes.desc=Pokazuje ilość dni pozostałych do promowania juniora
-foxtrick.HighlightBotTeams.desc=Podświetla boty oraz drużyny bez właściciela na stronie ligi
+foxtrick.HighlightOwnerless.desc=Podświetla boty oraz drużyny bez właściciela na stronie ligi
 foxtrick.LastLogin.desc=Wyświetla czas od ostatniego zalogowania na stronie użytkownika
 foxtrick.TransferCompareSort.desc=Umożliwia sortowanie Porównania Transferów według formy, TSI i ceny
 foxtrick.ForumStripHattrickLinks.desc=Usuwa z linków na forum nazwę serwera Hattricka
