--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -312,7 +312,7 @@ foxtrick.MatchTables.desc=Удалять лишние пробелы в спис
 foxtrick.MatchTables.RemoveTime.desc=Удалять время начала матча в списке матчей
 foxtrick.YouthPromotes.desc=Показывать дни до возможности вызова игрока юношеской команды
 foxtrick.htmsStatistics.desc=Добавлять статистику по забитым голам в матчах.
-foxtrick.HighlightBotTeams.desc=Подсвечивать команды-боты и команды без владельца на странице лиги.
+foxtrick.HighlightOwnerless.desc=Подсвечивать команды-боты и команды без владельца на странице лиги.
 foxtrick.LastLogin.desc=Показывать время, прошедшее с последнего входа в игру, на странице менеджера
 foxtrick.TransferCompareSort.desc=Сортирует результаты сравнения трансферов по TSI, цене или форме при клике на заголовке
 foxtrick.ForumStripHattrickLinks.desc=Преобразовывать веб-ссылки, ведущие на другие страницы Hattrick, в относительные, чтобы сделать их рабочими для любого сервера. Также добавляет пробелы для вложенных тегов i/b/u внутри тегов pre (модуль FormatPostingText)
