--- a/content/locale/sk/foxtrick.properties
+++ b/content/locale/sk/foxtrick.properties
@@ -351,8 +351,8 @@ foxtrick.htmsStatistics.Home.desc=Vlastná farba výhry
 foxtrick.htmsStatistics.Draw.desc=Vlastná farba remízy
 foxtrick.htmsStatistics.Away.desc=Vlastná farba prehry
 foxtrick.PredefinedChallenges.desc=Ukladá posledné zmeny na stránke s výzvami a vypĺňa formuláre na výzvy s týmito hodnotami
-foxtrick.HighlightBotTeams.desc=Zvýrazňuje bot tímy a tímy bez majiteľa na stránke ligy
-foxtrick.HighlightBotTeams.ChooseColorHighlight.desc=Zvoľ si vlastný spôsob zvýrazňovania
+foxtrick.HighlightOwnerless.desc=Zvýrazňuje bot tímy a tímy bez majiteľa na stránke ligy
+foxtrick.HighlightOwnerless.ChooseColorHighlight.desc=Zvoľ si vlastný spôsob zvýrazňovania
 foxtrick.LastLogin.desc=Zobrazuje čas od posledného prihlásenia na stránke s manažérom
 foxtrick.TransferCompareSort.desc=Kliknutím na hlavičku zotriedi hráčov v porovnaní prestupov podľa TSI, veku alebo formy
 foxtrick.LeagueAndMatchChat.desc=Pridáva odkaz na externý chat na stránke pohára a federačnej stránke tak isto ako na stránkach ligy, dorasteneckej ligy a seniorských či ligových zápasov.
