--- a/content/locale/vi/foxtrick.properties
+++ b/content/locale/vi/foxtrick.properties
@@ -342,7 +342,7 @@ foxtrick.CountryList.HideFlagOntop.desc=Loại bỏ đường dẫn ảnh đến
 foxtrick.MatchTables.desc=Loại bỏ khoảng trống trắng ở bảng xếp hạng trận đấu theo thiết kế đơn giản
 foxtrick.MatchTables.RemoveTime.desc=Loại bỏ thời gian trận đấu ở bảng xếp hạng trận đấu hiện tại
 foxtrick.YouthPromotes.desc=Hiển thị số ngày để đôn một cầu thủ trẻ lên
-foxtrick.HighlightBotTeams.desc=Đánh dấu đội 'máy' ở trang bảng đấu
+foxtrick.HighlightOwnerless.desc=Đánh dấu đội 'máy' ở trang bảng đấu
 foxtrick.LastLogin.desc=Hiển thị thời gian từ lần đăng nhập gần nhất ở trang người chơi
 foxtrick.TransferCompareSort.desc=Chọn tiêu đề xếp loại những kết quả chuyển nhượng so sánh theo TSI, giá tiền hay phong độ
 foxtrick.ForumStripHattrickLinks.desc=Lấy thông tin server từ những đường dẫn ẩn bên trong ở diễn đàn để làm nó hoạt động được
