--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -348,6 +348,10 @@ foxtrick.GuestbookHTMSFlags.HideAnswerToLinks.desc=Сакриј линк "Ком
 foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToSupporters.desc=Додаје заставице држава корисника у листу супортера на страници клуба
 foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToVisitors.desc=Додаје заставице држава корисника у листу посетилаца на страницама клуба, лиге (сениорске и омладинске) и на страницама федерација
 foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToOldies.desc=Додаје заставице држава корисника на страници играча и тренера пониклих у клубу
+foxtrick.HTMSPoints.desc=На страници играча приказује HTMS тренинг поене у формату 'вештина/потенцијал: хххх/уууу'. Прва вредност, 'хххх', представља тренутну истренираност (збир свих вештина у односу на старост). А друга вредност 'уууу', представља максимални могући ниво истренираности и то под условом да се играч непрекидно тренира до своје 28. године. Примера ради, играчи са максимумом хххх/2000++ су кандидати за репрезентацију. Упоређивањем HTMS поена два играча може се лако закључити који има већи тренинг потенцијал.
+foxtrick.FriendlyInterface.desc=Подешавања за бољи интерфејс
+foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Приказуј пуно име играча на страници 'Постава тима'
+foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Прикажи име државе као линк ка страници репрезентације ѕа играче који су репрезентативци
 
 # -----------------------------------------------------------------------------
 
@@ -642,7 +646,7 @@ foxtrick.linkscustom.confirmremove=Сигурни сте да желите да 
 foxtrick.linkscustom.addtag=Додај ознаку
 foxtrick.linkscustom.tags=Ознаке
 foxtrick.linkscustom.help=Помоћ
-foxtrick.linkscustom.helptext=Пре свега ово је само режим за уређивање. Ако кликнете на заглавље овог оквира прећи ћете из уређивачког у нормални режим рада. Ваши линкови су поtпуно у функцији само када сте у нормалном режиму рада. Спољње линкове је лако додати, само убаците пуну адресу (Пример: http: \/\/alltid.org\/league\/427\/) . За интерни статички линк прескочите део који се тиче сервера (Пример: \/World\/Series\/Default.aspx?LeagueLevelUnitID=427). Ознаке су вам потребне само за ређе, динамичке линкове. Уз помоћ ознака линкови се динамички мењају користећи информацију са странице на којој се тренутно налазите. На пример http:\/\/alltid.org\/league\/[leagueid] ćе вас увек одвести на Аллтид страницу лиге коју тренутно прегледате на Хеттрику. Ознаке које су вам доступне за сваки сајт су приказане у падајућем менију. Можете користити и ознаке које су наведене на сајту за који додајете ваш персонализовани линk. Текст који је наведен је само пример, а ваше ознаке можете направити сами (уз помоћ [ ]).
+foxtrick.linkscustom.helptext=Пре свега ово је само режим за уређивање. Ако кликнете на заглавље овог оквира прећи ћете из уређивачког у нормални режим рада. Ваши линкови су поtпуно у функцији само када сте у нормалном режиму рада. Спољње линкове је лако додати, само убаците пуну адресу (Пример: http: \/\/alltid.org\/league\/427\/) . За интерни статички линк прескочите део који се тиче сервера (Пример: \/World\/Series\/Default.aspx?LeagueLevelUnitID=427). Ознаке су вам потребне само за ређе, динамичке линкове. Уз помоћ ознака линкови се динамички мењају користећи информацију са странице на којој се тренутно налазите  на пример: http:\/\/alltid.org\/league\/[leagueid] ćе вас увек одвести на Аллтид страницу лиге коју тренутно прегледате на Хеттрику. Ознаке које су вам доступне за сваки сајт су приказане у падајућем менију. Можете користити и ознаке које су наведене на сајту за који додајете ваш персонализовани линk. Текст који је наведен је само пример, а ваше ознаке можете направити сами (уз помоћ [ ]).
 foxtrick.linkscustom.helptext2=Своје линкове можете такође и да извезете и да их на тај начин ставите на располагање и другима. Да би сте то урадили можете кликнути на дугме ‘Извези’ и потом изаберите фајл у коме ћете сачувати линкове. Линкови ће бити само додати том фајлу, и као последица тога, можете сачувати  више линкова у исти фајл. Да бисте увезли линкове идите у таб ‘Главне опције’ подешавања за Фокстрик и у подмени ‘Увези или Извези подешавања’. Само подешавања које се налазе у фајлу ће бити увежена, а у вашем случају ће то бити само линкови. Ниједан од ваших претходно сачуваних линкова неће бити обрисан.
 foxtrick.matches.income=Приход:
 foxtrick.newmailtoyou=Нова порука за тебе
@@ -832,6 +836,10 @@ foxtrick.htmsStatistics.prediction=Претпостав. резултат
 foxtrick.htmsStatistics.windrawloss=победа/нереш./пораз
 foxtrick.htmsStatistics.linkcaption=ХТМС меч анализа
 foxtrick.htmsStatistics.changePrediction=Промени предвиђање
+
+# HTMSPoints
+HTMSPoints=HTMS поени:
+HTMSPoints.AbilityAndPotential=вештина: %1 / потенцијал: %2
 
 #actions
 Copy=Копирај
