Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5970 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -348,10 +348,10 @@ foxtrick.GuestbookHTMSFlags.HideAnswerToLinks.desc=Сакриј линк "Ком
 foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToSupporters.desc=Додаје заставице држава корисника у листу супортера на страници клуба
 foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToVisitors.desc=Додаје заставице држава корисника у листу посетилаца на страницама клуба, лиге (сениорске и омладинске) и на страницама федерација
 foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToOldies.desc=Додаје заставице држава корисника на страници играча и тренера пониклих у клубу
-foxtrick.HTMSPoints.desc=На страници играча приказује HTMS тренинг поене у формату 'вештина/потенцијал: хххх/уууу'. Прва вредност, 'хххх', представља тренутну истренираност (збир свих вештина у односу на старост). А друга вредност 'уууу', представља максимални могући ниво истренираности и то под условом да се играч непрекидно тренира до своје 28. године. Примера ради, играчи са максимумом хххх/2000++ су кандидати за репрезентацију. Упоређивањем HTMS поена два играча може се лако закључити који има већи тренинг потенцијал.
-foxtrick.FriendlyInterface.desc=Подешавања за бољи интерфејс
-foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Приказује пуно име играча на страници 'Постава тима'
-foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Приказује име државе као линк ка страници репрезентације за играче који су репрезентативци
+foxtrick.HTMSPoints.desc=На страници играча приказује HTMS тренинг бодове у формату 'вештинe: хххх / потенцијал: уууу'. Прва вредност, 'хххх', представља тренутну истренираност играча а израчунава се као збир свих вештина у односу на старост). Друга вредност, 'уууу', представља играчев максимални могући ниво истренираности и то под условом да се непрекидно тренира до своје 28. године. Примера ради, играчи са потенцијалом "уууу > 2000" су кандидати за репрезентацију. 
+foxtrick.FriendlyInterface.desc=ФрендлиИнтерфејс
+foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Прикажи пуно име играча на страници 'Постава тима'
+foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Прикажи име државе као линк на страници играча који су у репрезентацији.
 
 # -----------------------------------------------------------------------------
 
@@ -838,8 +838,8 @@ foxtrick.htmsStatistics.linkcaption=ХТМС меч анализа
 foxtrick.htmsStatistics.changePrediction=Промени предвиђање
 
 # HTMSPoints
-HTMSPoints=HTMS поени:
-HTMSPoints.AbilityAndPotential=вештина: %1 / потенцијал: %2
+HTMSPoints=HTMS-бодови:
+HTMSPoints.AbilityAndPotential=вештине: %1 / потенцијал: %2
 
 #actions
 Copy=Копирај
