Russian locale update up to MLF r5974
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5977 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -1,5 +1,5 @@
 ﻿# ru-RU (Russian language file)
-# based on MASTER language file r5944
+# based on MASTER language file r5974
 # by _KOHb_ [teamId=28914]
 
 # Hints:
@@ -257,7 +257,7 @@ foxtrick.LeagueNewsFilter.lineup_changes.desc=Показывать только 
 foxtrick.LeagueNewsFilter.PAs.desc=Показывать только пресс-релизы
 foxtrick.LeagueNewsFilter.highlight_set_lineup.desc=Подсвечивать в списке предстоящих матчей клубы, недавно изменившие расстановку
 foxtrick.LeagueNewsFilter.highlight_wins.desc=Подсвечивать команду-победителя в списке прошедших матчей
-foxtrick.LeagueNewsFilter.gray_bots.desc=Отмечать серым команды-боты и клубы без менеджера в списке матчей лиги
+foxtrick.LeagueNewsFilter.gray_bots.desc=Отмечать серым команды без менеджера в списке матчей лиги
 foxtrick.ShortPAs.desc=Показывать только разворачиваемые заголовки пресс-релизов
 foxtrick.MoveManagerOnline.desc=Передвигает менеджеров в игре выше на странице региона. Внимание! Это сильно замедлит отображение при количестве менеджеров в игре больше 100.
 foxtrick.TeamPopupLinks.TeamLinks.desc=Добавить всплывающее меню к ссылкам на клуб
@@ -292,7 +292,7 @@ foxtrick.MatchIncome.desc=Доход от матча в отчёте
 foxtrick.CrossTable.allway_show_cross.desc=Всегда показывать актуальную таблицу лиги
 foxtrick.CrossTable.allway_show_graph.desc=Всегда показывать график изменения положения команд
 foxtrick.CrossTable.GraphHeader.desc=Изменение положения команд
-foxtrick.CrossTable.TableHeader.desc=Турнирная таблица
+foxtrick.CrossTable.TableHeader.desc=Результаты матчей
 foxtrick.YouthSkillHideUnknown.desc=Больше пространства на странице игрока юношеской команды
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Скрыть неизвестные навыки игрока юношеской команды
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Убирает слово 'максимум' в отображении известных навыков для увеличения полезного пространства, например, при включенных лицах игроков
@@ -312,7 +312,7 @@ foxtrick.MatchTables.desc=Удалять лишние пробелы в спис
 foxtrick.MatchTables.RemoveTime.desc=Удалять время начала матча в списке матчей
 foxtrick.YouthPromotes.desc=Показывать дни до возможности вызова игрока юношеской команды
 foxtrick.htmsStatistics.desc=Добавлять статистику по забитым голам в матчах.
-foxtrick.HighlightOwnerless.desc=Подсвечивать команды-боты и команды без владельца на странице лиги.
+foxtrick.HighlightOwnerless.desc=Подсвечивать команды без владельца на странице лиги.
 foxtrick.LastLogin.desc=Показывать время, прошедшее с последнего входа в игру, на странице менеджера
 foxtrick.TransferCompareSort.desc=Сортирует результаты сравнения трансферов по TSI, цене или форме при клике на заголовке
 foxtrick.ForumStripHattrickLinks.desc=Преобразовывать веб-ссылки, ведущие на другие страницы Hattrick, в относительные, чтобы сделать их рабочими для любого сервера. Также добавляет пробелы для вложенных тегов i/b/u внутри тегов pre (модуль FormatPostingText)
@@ -337,9 +337,15 @@ foxtrick.GuestbookHTMSFlags.desc=Показывать флаг страны ме
 foxtrick.GuestbookHTMSFlags.AddHTMSFlags.desc=Показывать флаг страны менеджера
 foxtrick.GuestbookHTMSFlags.HideAnswerToLinks.desc=Прятать ссылку "ответить" для каждой записи в гостевой книге
 foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToSupporters.desc=Показывать флаг страны менеджера на странице поддержки команд
-foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToVisitors.desc=Добавлять флаг страны менеджера к списку посещений на странице команды, лиги и юношеской лиги
+foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToVisitors.desc=Добавлять флаг страны менеджера к списку посещений на странице команды, лиги (основной и юношеской) и федерации
 foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToOldies.desc=Добавлять флаг страны менеджера к списку команд на страницах бывших игроков и тренеров
-
+foxtrick.HTMSPoints.desc=Показывать очки тренировки, подсчитанные согласно таблице навыков HTMS
+foxtrick.HTMSPoints.addToPlayer.desc=Добавлять очки на страницу игрока
+foxtrick.HTMSPoints.addToSearchResult.desc=Добавлять очки каждому игроку на странице результата поиска трансферов
+foxtrick.HTMSPoints.addToPlayerList.desc=Добавлять очки каждому игроку на странице списка игроков
+foxtrick.FriendlyInterface.desc=Улучшения для обеспечения более дружественного интерфейса
+foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Показывать полные имена игроков на странице расстановки
+foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Добавлять ссылку на сборную к игрокам сборных
 # -----------------------------------------------------------------------------
 
 
@@ -813,6 +819,10 @@ foxtrick.htmsStatistics.prediction=Прогноз
 foxtrick.htmsStatistics.windrawloss.desc=победа/ничья/поражение
 foxtrick.htmsStatistics.linkcaption=Анализ матча с помощью HTMS
 foxtrick.htmsStatistics.changePrediction=Изменить прогноз
+
+# HTMSPoints
+HTMSPoints=Очки HTMS:
+HTMSPoints.AbilityAndPotential=Текущие очки: %1 / потенциал (в 28 лет): %2
 
 #actions
 Copy=Скопировать
