Serbian translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5994 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -1,4 +1,4 @@
-﻿# SERBIAN language file (rXXXX)
+ # SERBIAN language file (rXXXX)
 # utf-8 encoded SERBIAN language file sr-RS
 # By ljushaff
 
@@ -524,9 +524,9 @@ Set_pieces=Прекиди
 Set_pieces.abbr=ПР
 
 HTMS_Ability=HTMS-бодови вештине
-HTMS_Ability.abbr=Вештине
+HTMS_Ability.abbr=Веш.
 HTMS_Potential=HTMS-бодови потенцијал
-HTMS_Potential.abbr=Потенцијал
+HTMS_Potential.abbr=Пот.
 
 PlayerCategory=Категорија играча
 PlayerCategory.abbr=Кат
