Српски језик промоција за омладинце
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5995 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -381,10 +381,9 @@ foxtrick.HistoryStats.label=Преглед историје
 foxtrick.HistoryStats.cupwinner=Победник Купа
 foxtrick.HistoryStats.cupwinner.short=ПК
 
-# YouthPromoteDays
-foxtrick.youthpromotedays.prom_d=Играч може бити промовисан за
-foxtrick.youthpromotedays.days=дана
-foxtrick.youthpromotedays.prom_t=Играч може бити промовисан данас!
+# YouthPromotes
+YouthPromotes.future=Играч може бити промовисан %2 (кроз %1 дана).
+YouthPromotes.today=Играч може бити промовисан!
 
 # links
 foxtrick.links.boxheader=Линкови
