--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -342,12 +342,12 @@ foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=ИД-ови тема (д
 foxtrick.TableSort.desc=Омогућава сортирање по колонама свих 'правих' табела које имају заглавље (укључујући и табеле у постовима на форуму)
 foxtrick.LiveAlert.desc=Обавештењa за голове у мечевима које пратите уживо.
 foxtrick.NtPeek.desc=Додаје преглед актуелних мечева сениорске и младе репрезентације на страницу: Мој Хеттрик » Вести
-foxtrick.GuestbookHTMSFlags.desc=Приказује заставице држава корисника уписаних у књигу гостију
-foxtrick.GuestbookHTMSFlags.AddHTMSFlags.desc=Прикажи заставице
-foxtrick.GuestbookHTMSFlags.HideAnswerToLinks.desc=Сакриј линк "Коментар" у књизи гостију
-foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToSupporters.desc=Додаје заставице држава корисника у листу супортера на страници клуба
-foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToVisitors.desc=Додаје заставице држава корисника у листу посетилаца на страницама клуба, лиге (сениорске и омладинске) и на страницама федерација
-foxtrick.GuestbookHTMSFlags.AddHTMSFlagsToOldies.desc=Додаје заставице држава корисника на страници играча и тренера пониклих у клубу
+foxtrick.SeriesFlags.desc=Приказује заставице држава корисника уписаних у књигу гостију
+foxtrick.SeriesFlags.AddHTMSFlags.desc=Прикажи заставице
+foxtrick.SeriesFlags.HideAnswerToLinks.desc=Сакриј линк "Коментар" у књизи гостију
+foxtrick.SeriesFlags.Supporters.desc=Додаје заставице држава корисника у листу супортера на страници клуба
+foxtrick.SeriesFlags.Visitors.desc=Додаје заставице држава корисника у листу посетилаца на страницама клуба, лиге (сениорске и омладинске) и на страницама федерација
+foxtrick.SeriesFlags.Oldies.desc=Додаје заставице држава корисника на страници играча и тренера пониклих у клубу
 foxtrick.HTMSPoints.desc=На страници играча приказује HTMS тренинг бодове у формату 'вештинe: хххх / потенцијал: уууу'. Прва вредност, 'хххх', представља тренутну истренираност играча а израчунава се као збир свих вештина у односу на старост). Друга вредност, 'уууу', представља играчев максимални могући ниво истренираности и то под условом да се непрекидно тренира до своје 28. године. Примера ради, играчи са потенцијалом "уууу > 2000" су кандидати за репрезентацију. 
 foxtrick.HTMSPoints.AddToPlayer.desc=Прикажи HTMS-бодове на страници играча 
 foxtrick.HTMSPoints.AddToSearchResult.desc=Прикажи HTMS-бодове и код играча на страници резултата претраге трансфера
