Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6013 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -341,20 +341,21 @@ foxtrick.ForumThreadAutoIgnore.Tags.desc=Тагови (на пример: NT, id
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=ИД-ови тема (део ИД-а поста до тачке испред броја поста) које неће бити игнорисане (ИД-ове раздвојите зарезом)
 foxtrick.TableSort.desc=Омогућава сортирање по колонама свих 'правих' табела које имају заглавље (укључујући и табеле у постовима на форуму)
 foxtrick.LiveAlert.desc=Обавештењa за голове у мечевима које пратите уживо.
+foxtrick.OldStyleFace.desc=Прикажи слике играча и аватаре на форуму у старом Хеттрик стилу
 foxtrick.NtPeek.desc=Додаје преглед актуелних мечева сениорске и младе репрезентације на страницу: Мој Хеттрик » Вести
-foxtrick.SeriesFlags.desc=Приказује заставице држава корисника уписаних у књигу гостију
-foxtrick.SeriesFlags.AddHTMSFlags.desc=Прикажи заставице
-foxtrick.SeriesFlags.HideAnswerToLinks.desc=Сакриј линк "Коментар" у књизи гостију
-foxtrick.SeriesFlags.Supporters.desc=Додаје заставице држава корисника у листу супортера на страници клуба
-foxtrick.SeriesFlags.Visitors.desc=Додаје заставице држава корисника у листу посетилаца на страницама клуба, лиге (сениорске и омладинске) и на страницама федерација
-foxtrick.SeriesFlags.Oldies.desc=Додаје заставице држава корисника на страници играча и тренера пониклих у клубу
+foxtrick.SeriesFlags.desc=Прикажи заставице држава и лигу корисника
+foxtrick.SeriesFlags.Guestbook.desc=Приказује заставице држава и лигу корисника уписаних у књигу гостију
+foxtrick.SeriesFlags.Supporters.desc=Додаје заставице држава и лигу корисника у листу супортера на страници клуба
+foxtrick.SeriesFlags.Visitors.desc=Додаје заставице држава и лигу корисника у листу посетилаца на страницама клуба, лиге (сениорске и омладинске) и на страницама федерација
+foxtrick.SeriesFlags.Oldies.desc=Додаје заставице држава и лигу корисника на страници играча и тренера пониклих у клубу
 foxtrick.HTMSPoints.desc=На страници играча приказује HTMS тренинг бодове у формату 'вештинe: хххх / потенцијал: уууу'. Прва вредност, 'хххх', представља тренутну истренираност играча а израчунава се као збир свих вештина у односу на старост). Друга вредност, 'уууу', представља играчев максимални могући ниво истренираности и то под условом да се непрекидно тренира до своје 28. године. Примера ради, играчи са потенцијалом "уууу > 2000" су кандидати за репрезентацију. 
 foxtrick.HTMSPoints.AddToPlayer.desc=Прикажи HTMS-бодове на страници играча 
 foxtrick.HTMSPoints.AddToSearchResult.desc=Прикажи HTMS-бодове и код играча на страници резултата претраге трансфера
 foxtrick.HTMSPoints.AddToPlayerList.desc=Прикажи HTMS-бодове и на листи играча 
-foxtrick.FriendlyInterface.desc=ФрендлиИнтерфејс
+foxtrick.FriendlyInterface.desc=Пребуџи за побољшање изгледа
 foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Прикажи пуно име играча на страници 'Постава тима'
 foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Прикажи име државе као линк на страници играча који су репрезентативци.
+foxtrick.FriendlyInterface.HideAnswerTo.desc=Сакриј линк "Коментар" у књизи гостију
 
 # -----------------------------------------------------------------------------
 
