--- a/content/locale/ru/release-notes.xml
+++ b/content/locale/ru/release-notes.xml
@@ -9,25 +9,25 @@
      translate the "localized-version" attribute. -->
 
 <notes xmlns:xhtml="http://www.w3.org/1999/xhtml">
-<note version="nightly" localized-version="Версия для разработчиков">
-<item>Пожалуйста, посмотрите <xhtml:a href="http://code.google.com/p/foxtrick/source/list">историю изменений</xhtml:a> на сайте Google Code для деталей.</item>
-<item>Вы можете отключить показ этого сообщения после каждого обновления, запретив "Показать информацию о выпуске после обновления FoxTrick" на вкладке <xhtml:a href="#tab=main">Главные</xhtml:a> настроек.</item>
-</note>
+	<note version="nightly" localized-version="Версия для разработчиков">
+		<item>Пожалуйста, посмотрите <xhtml:a href="http://code.google.com/p/foxtrick/source/list">историю изменений</xhtml:a> на сайте Google Code для деталей.</item>
+		<item>Вы можете отключить показ этого сообщения после каждого обновления, запретив "Показать информацию о выпуске после обновления FoxTrick" на вкладке <xhtml:a href="#tab=main">Главные</xhtml:a> настроек.</item>
+	</note>
 
-<note version="0.6">
-<item>NНовый интерфейс настроек.</item>
-<item>Модуль <module>LiveAlert</module> для уведомления о голах в HT Live (ryanli).</item>
-<item>Модуль <module>OldStyleFace</module> для отображения лиц в старом стиле Hattrick (Aimo_Kanuuna).</item>
-<item>Модуль <module>NtPeek</module> для скрытия матчей сборной из Моего Hattrick'а (ryanli).</item>
-<item>Модуль <module>SeriesFlags</module> для показа флага и лиги оставившего сообщение в гостевой книге (taised). Он основан на ранее присутствовавшем модуле GuestbookAlltidFlags, изображения предоставлены <xhtml:a href="http://www.fantamondi.it/HTMS/">HTMS</xhtml:a>.</item>
-<item>Модуль <module>HTMSPoints</module> для показа <xhtml:a href="http://www.fantamondi.it/HTMS/index.php?page=nt&amp;lang=en">очков HTMS</xhtml:a> игрока, т.е. цифровые уровни навыков и потенциала. (taised)</item>
-<item>Модуль <module>FriendlyInterface</module> с параметрами для отображения полного имени игрока в окне расстановки и перехода на сборные для их игроков. (ryanli)</item>
-<item>Параметр для скрытия быстрого взгляда на форумы в модуле <module>FixcssProblems</module> (ljushaff).</item>
-<item>Добавлен белорусский перевод (LA-Stolik).</item>
-<item>Новый значок для ссылок на отчёты (ljushaff).</item>
-<item>Модуль <module>YouthPromotes</module> также показывает и самый ранний день для вызова игрока.</item>
-<item>Большая часть расширений теперь работают под Google Chrome.</item>
-<item>Некоторые исправления для соответствия последним изменениям HT.</item>
-<item>Параметры радио в модуле <module>ExtraShortcuts</module> теперь выключены по умолчанию.</item>
-</note>
+	<note version="0.6">
+		<item>NНовый интерфейс настроек.</item>
+		<item>Модуль <module>LiveAlert</module> для уведомления о голах в HT Live (ryanli).</item>
+		<item>Модуль <module>OldStyleFace</module> для отображения лиц в старом стиле Hattrick (Aimo_Kanuuna).</item>
+		<item>Модуль <module>NtPeek</module> для скрытия матчей сборной из Моего Hattrick'а (ryanli).</item>
+		<item>Модуль <module>SeriesFlags</module> для показа флага и лиги оставившего сообщение в гостевой книге.  Он основан на ранее присутствовавшем модуле GuestbookAlltidFlags, изображения предоставлены <xhtml:a href="http://www.fantamondi.it/HTMS/">HTMS</xhtml:a> (taised).</item>
+		<item>Модуль <module>HTMSPoints</module> для показа <xhtml:a href="http://www.fantamondi.it/HTMS/index.php?page=nt&amp;lang=en">очкий HTMS</xhtml:a> игрока, т.е. цифрового представления текущих навыков и потенциала (taised).</item>
+		<item>Модуль <module>FriendlyInterface</module> с параметрами для отображения полного имени игрока в окне расстановки и перехода на сборные для их игроков. (ryanli)</item>
+		<item>Параметр для скрытия быстрого взгляда на форумы в модуле <module>FixcssProblems</module> (ljushaff).</item>
+		<item>Добавлен белорусский перевод (LA-Stolik).</item>
+		<item>Новый значок для ссылок на отчёты (ljushaff).</item>
+		<item>Модуль <module>YouthPromotes</module> также показывает и самый ранний день для вызова игрока.</item>
+		<item>Большая часть расширений теперь работают под Google Chrome.</item>
+		<item>Некоторые исправления для соответствия последним изменениям HT.</item>
+		<item>Параметры радио в модуле <module>ExtraShortcuts</module> теперь выключены по умолчанию.</item>
+	</note>
 </notes>
